--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="puyokuraのポートフォリオサイト">
-    <title>puyokura's Portfolio</title>
+    <meta name="description" content="puyokuraのポートフォリオサイト | Web Developer">
+    <title>puyokura Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <div class="cursor"></div>
+    <div class="cursor-follower"></div>
+    
     <header>
         <nav class="navbar">
             <div class="nav-brand">
-                <a href="#home">puyokura</a>
+                <div class="logo">P</div>
+                <span class="brand-text">puyokura</span>
             </div>
             <button class="nav-toggle" aria-label="メニューを開く">
                 <span></span>
@@ -20,11 +24,11 @@
                 <span></span>
             </button>
             <ul class="nav-menu">
-                <li><a href="#home">ホーム</a></li>
-                <li><a href="#about">自己紹介</a></li>
-                <li><a href="#skills">スキル</a></li>
-                <li><a href="#works">作品</a></li>
-                <li><a href="#contact">お問い合わせ</a></li>
+                <li><a href="#home" data-text="HOME">ホーム</a></li>
+                <li><a href="#about" data-text="ABOUT">自己紹介</a></li>
+                <li><a href="#skills" data-text="SKILLS">スキル</a></li>
+                <li><a href="#works" data-text="WORKS">作品</a></li>
+                <li><a href="#contact" data-text="CONTACT">お問い合わせ</a></li>
             </ul>
         </nav>
     </header>
@@ -32,143 +36,185 @@
     <main>
         <section id="home" class="hero">
             <div class="hero-content">
-                <h1>Welcome to My Portfolio</h1>
-                <p>ソフトウェアエンジニア・Web開発者</p>
-                <div class="hero-buttons">
-                    <a href="#works" class="btn primary">作品を見る</a>
-                    <a href="#contact" class="btn secondary">お問い合わせ</a>
+                <div class="glitch-container">
+                    <h1 class="glitch" data-text="puyokura">puyokura</h1>
                 </div>
+                <p class="hero-subtitle">Web Developer & Engineer</p>
+                <div class="hero-description">
+                    <span class="typed-text"></span><span class="cursor-typing">|</span>
+                </div>
+                <div class="hero-buttons">
+                    <a href="#works" class="btn primary">View Projects</a>
+                    <a href="#contact" class="btn secondary">Contact Me</a>
+                </div>
+            </div>
+            <div class="hero-background">
+                <div class="grid"></div>
             </div>
         </section>
 
         <section id="about" class="section">
-            <div class="container">
-                <h2 class="section-title">自己紹介</h2>
+            <div class="container reveal">
+                <h2 class="section-title">About Me</h2>
                 <div class="about-content">
-                    <div class="about-text">
-                        <p>こんにちは！私はpuyokuraです。</p>
-                        <p>ソフトウェア開発に情熱を持ち、特にWeb技術とオープンソースの開発に興味があります。</p>
-                        <p>日々新しい技術を学び、より良いソリューションを提供することを心がけています。</p>
+                    <div class="about-image">
+                        <div class="image-frame">
+                            <img src="https://via.placeholder.com/400x400" alt="Profile">
+                        </div>
                     </div>
-                    <div class="about-stats">
-                        <div class="stat-item">
-                            <i class="fas fa-code"></i>
-                            <h3>開発経験</h3>
-                            <p>3年以上</p>
-                        </div>
-                        <div class="stat-item">
-                            <i class="fas fa-project-diagram"></i>
-                            <h3>プロジェクト</h3>
-                            <p>15+完了</p>
-                        </div>
-                        <div class="stat-item">
-                            <i class="fas fa-users"></i>
-                            <h3>チーム開発</h3>
-                            <p>多数経験</p>
+                    <div class="about-text">
+                        <p>こんにちは。私はpuyokuraです。</p>
+                        <p>フロントエンド開発とPythonによるバックエンド開発を専門としています。</p>
+                        <p>最新のWeb技術とユーザー体験に焦点を当て、革新的なソリューションを提供することを心がけています。</p>
+                        <div class="about-stats">
+                            <div class="stat">
+                                <span class="stat-number" data-target="3">0</span>
+                                <span class="stat-label">Years Experience</span>
+                            </div>
+                            <div class="stat">
+                                <span class="stat-number" data-target="15">0</span>
+                                <span class="stat-label">Projects Completed</span>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="skills" class="section bg-light">
-            <div class="container">
-                <h2 class="section-title">スキル</h2>
+        <section id="skills" class="section">
+            <div class="container reveal">
+                <h2 class="section-title">Skills</h2>
                 <div class="skills-grid">
                     <div class="skill-card">
-                        <i class="fas fa-laptop-code"></i>
-                        <h3>フロントエンド</h3>
-                        <p>HTML, CSS, JavaScript, React, Vue.js</p>
+                        <div class="skill-icon">
+                            <i class="fas fa-code"></i>
+                        </div>
+                        <h3>Frontend</h3>
+                        <ul class="skill-list">
+                            <li>
+                                <span class="skill-name">HTML</span>
+                                <div class="skill-bar">
+                                    <div class="skill-progress" data-progress="90"></div>
+                                </div>
+                            </li>
+                            <li>
+                                <span class="skill-name">CSS</span>
+                                <div class="skill-bar">
+                                    <div class="skill-progress" data-progress="85"></div>
+                                </div>
+                            </li>
+                            <li>
+                                <span class="skill-name">JavaScript</span>
+                                <div class="skill-bar">
+                                    <div class="skill-progress" data-progress="80"></div>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                     <div class="skill-card">
-                        <i class="fas fa-server"></i>
-                        <h3>バックエンド</h3>
-                        <p>Node.js, Python, Java, SQL</p>
-                    </div>
-                    <div class="skill-card">
-                        <i class="fas fa-mobile-alt"></i>
-                        <h3>モバイル開発</h3>
-                        <p>React Native, Flutter</p>
-                    </div>
-                    <div class="skill-card">
-                        <i class="fas fa-cloud"></i>
-                        <h3>クラウド</h3>
-                        <p>AWS, Google Cloud, Azure</p>
+                        <div class="skill-icon">
+                            <i class="fas fa-server"></i>
+                        </div>
+                        <h3>Backend</h3>
+                        <ul class="skill-list">
+                            <li>
+                                <span class="skill-name">Python</span>
+                                <div class="skill-bar">
+                                    <div class="skill-progress" data-progress="85"></div>
+                                </div>
+                            </li>
+                            <li>
+                                <span class="skill-name">データベース設計</span>
+                                <div class="skill-bar">
+                                    <div class="skill-progress" data-progress="75"></div>
+                                </div>
+                            </li>
+                            <li>
+                                <span class="skill-name">API開発</span>
+                                <div class="skill-bar">
+                                    <div class="skill-progress" data-progress="80"></div>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </section>
 
         <section id="works" class="section">
-            <div class="container">
-                <h2 class="section-title">作品</h2>
+            <div class="container reveal">
+                <h2 class="section-title">Works</h2>
                 <div class="works-grid">
                     <article class="work-card">
                         <div class="work-image">
-                            <img src="https://via.placeholder.com/400x300" alt="プロジェクト1">
-                        </div>
-                        <div class="work-content">
-                            <h3>ポートフォリオサイト</h3>
-                            <p>React.jsを使用して作成した個人ポートフォリオサイト</p>
-                            <div class="work-tags">
-                                <span>React</span>
-                                <span>JavaScript</span>
-                                <span>CSS</span>
+                            <img src="https://via.placeholder.com/400x300" alt="Project 1">
+                            <div class="work-overlay">
+                                <div class="work-details">
+                                    <h3>インタラクティブWebアプリ</h3>
+                                    <p>HTMLとJavaScriptを使用した次世代のWebアプリケーション</p>
+                                    <a href="#" class="btn primary">詳細を見る</a>
+                                </div>
                             </div>
-                            <a href="#" class="btn primary">詳細を見る</a>
+                        </div>
+                        <div class="work-tags">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
                         </div>
                     </article>
                     <article class="work-card">
                         <div class="work-image">
-                            <img src="https://via.placeholder.com/400x300" alt="プロジェクト2">
-                        </div>
-                        <div class="work-content">
-                            <h3>天気予報アプリ</h3>
-                            <p>リアルタイムの天気情報を提供するWebアプリケーション</p>
-                            <div class="work-tags">
-                                <span>Vue.js</span>
-                                <span>Node.js</span>
-                                <span>API</span>
+                            <img src="https://via.placeholder.com/400x300" alt="Project 2">
+                            <div class="work-overlay">
+                                <div class="work-details">
+                                    <h3>高性能APIサービス</h3>
+                                    <p>Pythonを使用した最新のRESTful API開発</p>
+                                    <a href="#" class="btn primary">詳細を見る</a>
+                                </div>
                             </div>
-                            <a href="#" class="btn primary">詳細を見る</a>
+                        </div>
+                        <div class="work-tags">
+                            <span>Python</span>
+                            <span>API</span>
+                            <span>データベース</span>
                         </div>
                     </article>
                 </div>
             </div>
         </section>
 
-        <section id="contact" class="section bg-light">
-            <div class="container">
-                <h2 class="section-title">お問い合わせ</h2>
+        <section id="contact" class="section">
+            <div class="container reveal">
+                <h2 class="section-title">Contact</h2>
                 <div class="contact-content">
                     <div class="contact-info">
-                        <h3>SNSでつながりましょう</h3>
+                        <h3>Let's Connect</h3>
                         <div class="social-links">
-                            <a href="https://github.com/puyokura" target="_blank" rel="noopener noreferrer">
+                            <a href="https://github.com/puyokura" target="_blank" rel="noopener noreferrer" class="social-link">
                                 <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                            <a href="#" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-linkedin"></i>
                             </a>
                         </div>
                     </div>
                     <form class="contact-form" id="contact-form">
                         <div class="form-group">
-                            <label for="name">お名前</label>
                             <input type="text" id="name" name="name" required>
+                            <label for="name">お名前</label>
+                            <span class="focus-border"></span>
                         </div>
                         <div class="form-group">
-                            <label for="email">メールアドレス</label>
                             <input type="email" id="email" name="email" required>
+                            <label for="email">メールアドレス</label>
+                            <span class="focus-border"></span>
                         </div>
                         <div class="form-group">
-                            <label for="message">メッセージ</label>
                             <textarea id="message" name="message" required></textarea>
+                            <label for="message">メッセージ</label>
+                            <span class="focus-border"></span>
                         </div>
-                        <button type="submit" class="btn primary">送信する</button>
+                        <button type="submit" class="btn primary">
+                            <span>送信する</span>
+                            <i class="fas fa-paper-plane"></i>
+                        </button>
                     </form>
                 </div>
             </div>
@@ -178,6 +224,7 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2025 puyokura. All rights reserved.</p>
+            <p class="footer-time">Last updated: 2025-04-20 07:24:13 UTC</p>
         </div>
     </footer>
 
