deploy: 78d216cd9d88e47990e478bb2011495e8899cbf5

--- a/404.html
+++ b/404.html
@@ -23,13 +23,28 @@
   </div>
 </header>
     <main class="container-lg p-3 p-md-4 p-lg-5">
-      <div style="text-align: center;">
+      <div class="d-flex flex-wrap flex-lg-nowrap">
+        <div class="flex-auto col-lg-9 mr-lg-5">
+          <div style="text-align: center;">
   <h1 style="margin: 30px 0; font-size: 4em; line-height: 1; letter-spacing: -1px;">404</h1>
 
   <p><strong>ページが見つかりませんでした :(</strong></p>
   <p>お探しのページは存在しないか、移動した可能性があります。</p>
 </div>
 
+        </div>
+        <div class="flex-shrink-0 col-lg-3">
+          <div class="Box">
+  <div class="Box-header">
+    <h2 class="Box-title">About</h2>
+  </div>
+  <div class="Box-body">
+    <p>技術的な知見や備忘録を公開するブログ。</p>
+  </div>
+</div>
+
+        </div>
+      </div>
     </main>
     <footer class="footer container-lg px-3">
   <div class="d-flex flex-justify-center">
