--- a/about/index.html
+++ b/about/index.html
@@ -23,10 +23,25 @@
   </div>
 </header>
     <main class="container-lg p-3 p-md-4 p-lg-5">
-      <p>こんにちは！ このページは “About” ページです。</p>
+      <div class="d-flex flex-wrap flex-lg-nowrap">
+        <div class="flex-auto col-lg-9 mr-lg-5">
+          <p>こんにちは！ このページは “About” ページです。</p>
 
 <p>ここにあなたの自己紹介や、このブログの目的などを自由に記述できます。</p>
 
+        </div>
+        <div class="flex-shrink-0 col-lg-3">
+          <div class="Box">
+  <div class="Box-header">
+    <h2 class="Box-title">About</h2>
+  </div>
+  <div class="Box-body">
+    <p>技術的な知見や備忘録を公開するブログ。</p>
+  </div>
+</div>
+
+        </div>
+      </div>
     </main>
     <footer class="footer container-lg px-3">
   <div class="d-flex flex-justify-center">
